--- a/src/components/StockList/StockList.scss
+++ b/src/components/StockList/StockList.scss
@@ -1,15 +1,18 @@
 @import "../../common.scss";
 
 .container {
-  border: 1px solid black;
   width: 500px;
+  min-height: 500px;
+  background-color: $background-green;
+  border: solid 1px $border-white;
 }
 
 .add-container {
-  border-top: 1px solid grey;
+  @include container-flex(row);  
+  border-top: 1px $border-white;
   border-bottom: 1px solid grey;
-  background-color: #181717;
+  background-color: $background-green;
+  height: 100px;
   color: #fff;
   font-size: 28px;
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
 }
